--- a/Alllive/Views/User/Schedule.cshtml
+++ b/Alllive/Views/User/Schedule.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Alllive.Models.Schedule>
+﻿@model IEnumerable<Alllive.Models.UserScheduleResult>
 @{
     ViewBag.Title = "Schedule";
 }
@@ -12,18 +12,17 @@
             <div class="row">
                 <div class="col-sm col-md-4">
                     <div class="col-md-4">
-                        IMAGE
                     </div>
                     <div class="col-md-4">
                         <b>@item.SessionID</b>
                         <br />
-                        @item.DateTimeScheduledIn
+                        @*@item.DateTimeScheduledIn*@
                     </div>
                     <div class="col-md-4">
-                        @item.DateTimeScheduleOut
+                        @*@item.DateTimeScheduleOut*@
                     </div>
                     <div class="col-md-4">
-                        @item.SessionDescription
+                        @*@item.SessionDescription*@
                     </div>
 
 
