--- a/Alllive/Views/Shared/_Layout.cshtml
+++ b/Alllive/Views/Shared/_Layout.cshtml
@@ -52,10 +52,13 @@
                     {
                         @Html.ActionLink("Login", "Login", "Home", false, new { style = "position:absolute; right:10px; top:10px;" })
                         @Html.ActionLink("Register", "Register", "User", false, new { style = "position:absolute; right:60px; top:10px;" })
+                        @Html.ActionLink("Register as Tutor", "TutorRegistration", "User", false, new { style = "position:absolute; right:160px; top:10px;" })
 
                     }
                     else
                     {
+                        @Html.ActionLink("Profile", "ViewProfile", "User", null, new { style = "position: absolute; right:60px; top:10px;" })
+
                         @Html.ActionLink("Sign Out", "Logoff", "User", false, new { style = "position: absolute; right:10px; top:10px;" })
                     }
                 </div>
