--- a/Alllive/Views/Navigation/SearchTutor.cshtml
+++ b/Alllive/Views/Navigation/SearchTutor.cshtml
@@ -8,7 +8,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-5">
-            <form id="FilterForm" onsubmit="ApplyFilter(event)">
+            @Ajax.BeginForm("SearchResults",new AjaxOptions() { HttpMethod="Get", UpdateTargetId="SearchResults",InsertionMode=InsertionMode.Replace})
+            { 
+            @*<form id="FilterForm" onsubmit="ApplyFilter(event)">*@
                 @Html.Label("Filters")
                 <div>
                     <input name="Range" id="RangeControl1" class="form-control" type="range" min="0" max="200" step="5" />
@@ -51,7 +53,8 @@
                 <div>
                     <button class="btn btn-default" type="submit">Apply Filter</button>
                 </div>
-            </form>
+            @*</form>*@
+            }
         </div>
 
         <div class="form-group col-md-7">
